fix(website):Fix html overflow bug.

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -7,3 +7,6 @@
     @apply min-h-screen bg-white text-slate-950 dark:bg-slate-950 dark:text-slate-50;
   }
 }
+html, body, #root {
+    overflow-x: hidden;
+}
